--- a/css/style.css
+++ b/css/style.css
@@ -3294,6 +3294,25 @@ span a {
     width: 670px;
 }
 
+.mega {
+    column-count: 3;
+    padding: 0px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    background: white;
+    z-index: 99;
+    text-align: center;
+    display: none
+}
+
+.mega-menu:hover .mega {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    padding: 30px 0px;
+}
+
 @media screen and (min-width: 320px) and (max-width: 900px) {
     .container {
         width: 90%;
@@ -3652,9 +3671,9 @@ span a {
         padding: 0px;
     }
 
-    .remove-scroll {
+    /* .remove-scroll {
         overflow: hidden;
-    }
+    } */
 
     .search-input {
         margin: 0px;
@@ -3968,6 +3987,17 @@ span a {
 
     .fixed .nav-links.is-open {
         top: 50px;
+    }
+
+    .mega li {
+        border: none !important;
+    }
+
+    .mega-menu:hover .mega {
+        grid-template-columns: 1fr;
+        gap: 20px;
+        overflow: scroll;
+        height: 138px;
     }
 }
 
