--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'Jost';
-    src: url(../static/Jost-Light.ttf);
+    src: url(../static/Jost-Regular.ttf);
 }
 
 :root {
@@ -1029,7 +1029,7 @@ hr {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 50px 100px;
+    padding: 41px 96px;
     position: absolute;
     background-color: var(--light);
     bottom: 0;
@@ -1041,7 +1041,7 @@ hr {
     font-style: normal;
     font-weight: 500;
     font-size: 50px;
-    line-height: 62px;
+    line-height: 1.3;
     display: flex;
     align-items: center;
     color: var(--thinLight);
@@ -1052,7 +1052,7 @@ hr {
     font-style: normal;
     font-weight: 400;
     font-size: 22px;
-    line-height: 33px;
+    line-height: 1.3;
     display: flex;
     align-items: center;
     letter-spacing: 0.01em;
@@ -1310,9 +1310,7 @@ span.current.prev {
     color: var(--thinLight);
 }
 
-.address {
-    width: 222.27px;
-    height: 75.47px;
+.address a {
     font-family: 'Jost';
     font-style: normal;
     font-weight: 400;
@@ -1323,6 +1321,8 @@ span.current.prev {
     text-align: center;
     letter-spacing: 0.01em;
     color: var(--lightGray);
+    justify-content: center;
+    padding: 5px 0px 0px;
 }
 
 /* mail-box */
@@ -1366,7 +1366,7 @@ span.current.prev {
 }
 
 .massage-section {
-    width: 830px;
+    width: 800px;
 }
 
 .form {
@@ -3296,6 +3296,7 @@ span a {
     height: 14px;
     width: 14px;
     background-color: var(--light);
+    cursor: pointer;
 }
 
 .bio {
