make image of team mamber flip

--- a/css/style.css
+++ b/css/style.css
@@ -1276,19 +1276,28 @@ span.current.prev {
 .team-content {
     display: flex;
     justify-content: center;
-    padding: 100px 0px;
+    padding: 64px 0px 100px;
     gap: 22px;
 }
 
 .team-image img,
-.team-text {
+.team-image1 img,
+.team-image2 img,
+.team-image3 img,
+.team-text,
+.team-text1,
+.team-text2,
+.team-text3 {
     width: 283.55px;
     height: 433px;
     background: var(--gray);
     border-radius: 30px;
 }
 
-.team-text {
+.team-text,
+.team-text1,
+.team-text2,
+.team-text3 {
     background-color: var(--light);
     display: flex;
     flex-direction: column;
@@ -3430,6 +3439,66 @@ span a {
 
 .card-btn {
     margin: 228px 0px 0px 20px;
+}
+
+.flip-img:hover .flip-front {
+    transform: rotateY(180deg);
+}
+
+
+.team-text3,
+.team-text1,
+.team-text2,
+.team-text {
+    transform: rotateY(180deg);
+    position: absolute;
+    top: 0;
+}
+
+.flip-front {
+    width: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-img {
+    background-color: transparent;
+    width: 300px;
+}
+
+.team-image1,
+.team-text1,
+.team-image2,
+.team-text2,
+.team-image,
+.team-text,
+.team-image3,
+.team-text3 {
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.team-header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.team-header-heading {
+    font-family: 'DM Serif Display';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 50px;
+    line-height: 150%;
+    letter-spacing: 0.01em;
+    text-align: center;
+    color: var(--thinLight);
+    padding: 100px 0px 0px;
+    width: 547px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 900px) {
